# homarv3

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  api-tests.http  conftest.py  docker-compose.yml  home_assistant_tools.ipynb  main.py  main_test.py  pyproject.toml  pytest.ini  rest_command:.yaml
.github/: copilot-instructions.md
.github/workflows/: test.yml
docs/: ADDING_AGENTS_AS_TOOLS.md  DELAYED_MESSAGES.md  GITHUB_ISSUES.md  HUMBLEBUNDLE.md  MEMORY.md  TESTING_TOOL_APPROVAL.md  TOOL_APPROVAL.md  TOOL_RETRY.md
notebooks/: home_assistant_tools.ipynb  image_tester.ipynb
src/: agent.py  database.py  database_json.py  delayed_message_scheduler.py  delayed_message_scheduler_test.py  discord_approval.py  discord_approval_test.py  homar.py  homar_retry_test.py  homar_scheduling_tools_test.py  homar_test.py  memory.py  memory_integration_test.py  memory_test.py  tool_approval_integration_test.py
src/agents_as_tools/: consts.py  github_issue_agent.py  github_issue_agent_test.py  google_calendar_agent.py  grocy_agent.py  home_assistant_agent.py  humblebundle_agent.py  humblebundle_agent_test.py  image_generation_agent.py  prompts.py  todoist_agent.py
src/agents_as_tools/workflows/: workflow.json
src/displayer/: main.py
src/displayer/static/: index.html
src/grocy_mcp/: grocy_mcp.py  models.py  utils.py  utils_test.py
src/models/: __init__.py  schemas.py  schemas_test.py
